# Cluade_PLDiagonsis

./: .dockerignore  .env.example  .gitignore  Dockerfile  PRODUCT_TECH_DOC.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  web_app.py
.github/workflows/: ci.yml
config/: config.yaml
config/tools/: bird.yaml  icing.yaml  lightning.yaml  weather.yaml  wind.yaml
docs/: project-summary.md
landing-page/: index.html  style.css
mcp-services/bird-service/: Dockerfile  main.py  requirements.txt  test_main.py
mcp-services/icing-service/: Dockerfile  main.py  test_main.py
mcp-services/lightning-service/: Dockerfile  main.py  models.py  test_main.py
mcp-services/weather-service/: Dockerfile  main.py  models.py  test_main.py
mcp-services/wind-service/: Dockerfile  main.py  test_main.py
skills/: comprehensive_diagnosis.md  report_modifier.md  去掉雷电.md  新建文本文档.txt  花心线路_策略.md
skills/references/: diagnosis_rules.md  report_structure.md  tool_guidelines.md
src/: __init__.py
src/application/: context.py
src/core/: config.py  exceptions.py  models.py
src/domain/: diagnosis_planner.py  intent_classifier.py  prompt_builder.py  report_composer.py  report_engine.py  session_manager.py  skill_loader.py  state_machine.py  template_registry.py  tool_executor.py  weight_engine.py
src/infrastructure/: event_bus.py  fault_parser.py  line_normalizer.py  llm_service.py  session_repository.py  (+1 more)
tests/: conftest.py
web/: index.html  package.json  test-skills-ui-v2.mjs  test-skills-ui-v3.mjs  test-skills-ui.js  test-skills-ui.mjs  test-skills-ui.spec.ts  tsconfig.json  vite.config.ts
(+98 files in other folders)
